Revue profonde di composer : nettoyage, initialisation, affichage et déplacements

--- a/frontend/static/html/wizard.html
+++ b/frontend/static/html/wizard.html
@@ -217,14 +217,19 @@
                             </div> <!-- end card -->
                         </div> <!-- End wizard-parameters-->
 
-                        <div id="wizard-view" class="col-lg-8 card-container flip">
+
+
+
+
+                        <div class="col-lg-8 card-container flip">
+<iframe id="wizard-view" src="/static/html/wizard-view.html">
+<!--
                             <style></style>
                             <div class="card card-flip">
                                 <div class="front">
                                     <div class="card-body">
                                         <h6 class="card-title">Affichage</h6>
                                         <div id="wizard-result">
-                                            <!--dataviz result is injected here -->
                                         </div>
                                     </div>
                                 </div>
@@ -236,13 +241,15 @@
                                               </button>
                                         </h6>
                                         <div id="wizard-icons">
-                                            <!--icons are injected here -->
                                         </div>
                                     </div>
 
                                 </div>
                             </div>
+-->
+</iframe>
                         </div>
+
 
                         <div class="row wizard-code" style="padding-top: 10p;display: none;">
                             <div class="col">
