--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -1,96 +1,114 @@
 <div id="model-composer" data-colors="#005a66,#0094ab,#b0252e,#cf7a26,#e3c213,#9fb935,#2f476c,#b0006b,#555555,#999999">
+
     <!-- REQUERY template report is the main report div -->
     <template class="report">
-        <div class="container-fluid model-composer">
-            <div class="container report">
-                <!-- title and blocs are injected here -->
-            </div>
-        </div>
-    </template>
-    <template class="report-bloc-title" id="btitle">
-        <div class="report-bloc-title" data-model-title="Titre" data-model-description="Titre">
-            <div class="dataviz-container"></div>
+        <div class="container-fluid report">
+            <!-- title and blocs are injected here -->
         </div>
     </template>
 
+    <template class="report-bloc-title" id="btitle">
+        <div class="report-bloc-title" data-label="Titre" data-description="Titre">
+            <ul class="dataviz-container list-group list-group-horizontal"></ul>
+        </div>
+    </template>
 
     <!-- REQUERY (n) template report-bloc is a report bloc -->
     <template class="report-bloc" id="b12">
-        <div class="lyrow report-bloc b12" data-model-title="Cellule" data-model-description="100%">
-            <h4 class="bloc-title editable-text">
-                Titre du bloc
-                <!-- this text is editable in composer -->
-            </h4>
-            <div class="view bloc-content">
-                <div class="col layout-rows">
-                    <div class="row layout-cell dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
-                    </div>
-                </div>
+        <div class="lyrow report-bloc b12" data-label="1 colonne" data-description="100%">
+            <div class="bloc-title editable-text">
+                <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
-            <div class="bloc-sources">
-                <div class="col">
-                    <div class="text-edit-content">
-                        <p class="text-htm html">SOURCE: INSEE <strong>publication 2020</strong></p>
-                        <i class="editable-text"></i>
-                      </div>
-                </div>
-            </div>
-        </div>
-    </template>
-
-    <!-- REQUERY (n) template report-bloc is a report bloc -->
-    <template class="report-bloc" id="b6-6">
-        <div class="lyrow report-bloc b6-6" data-model-title="2 colonnes" data-model-description="50%/50%">
-            <h4 class="bloc-title editable-text">
-                Titre du bloc
-                <!-- this text is editable in composer -->
-            </h4>
-            <div class="view bloc-content">
+            <div class="bloc-content container-fluid layout-rows">
                 <div class="row layout-cols">
-                    <div class="col layout-cell dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
-                    </div>
-                    <div class="col layout-cell dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                    <div class="col-12 layout-cell splitable-grid">
+                        <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
                 </div>
             </div>
-            <div class="bloc-sources">
-                <div class="col">
-                    <div class="text-edit-content">
-                        <p class="text-htm html">SOURCE: INSEE <strong>publication 2020</strong></p>
-                        <i class="editable-text"></i>
-                      </div>
-                </div>
+            <div class="bloc-sources editable-text">
+                <p>SOURCE: INSEE <strong>publication 2020</strong></p>
             </div>
         </div>
     </template>
 
     <!-- REQUERY (n) template report-bloc is a report bloc -->
     <template class="report-bloc" id="b6-6">
-        <div class="lyrow report-bloc b6-6" data-model-title="2 lignes" data-model-description="50%/50%">
-            <h4 class="bloc-title editable-text">
-                Titre du bloc
-                <!-- this text is editable in composer -->
-            </h4>
-            <div class="view bloc-content">
-                <div class="col layout-rows">
-                    <div class="row layout-cell dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+        <div class="lyrow report-bloc b6-6" data-label="2 colonnes" data-description="50%/50%">
+            <div class="bloc-title editable-text">
+                <h4><!-- this text is editable in composer -->Titre du bloc</h4>
+            </div>
+            <div class="bloc-content container-fluid layout-rows">
+                <div class="row layout-cols">
+                    <div class="col-6 layout-cell splitable-grid">
+                        <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
-                    <div class="row layout-cell dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                    <div class="col-6 layout-cell splitable-grid">
+                        <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
                 </div>
             </div>
-            <div class="bloc-sources">
-                <div class="col">
-                    <div class="text-edit-content">
-                        <p class="text-htm html">SOURCE: INSEE <strong>publication 2020</strong></p>
-                        <i class="editable-text"></i>
-                      </div>
+            <div class="bloc-sources editable-text">
+                <p>SOURCE: INSEE <strong>publication 2020</strong></p>
+            </div>
+        </div>
+    </template>
+
+    <!-- REQUERY (n) template report-bloc is a report bloc -->
+    <template class="report-bloc" id="b4-4-4">
+        <div class="lyrow report-bloc b4-4-4" data-label="3 colonnes" data-description="33%/33%/33%">
+            <div class="bloc-title editable-text">
+                <h4><!-- this text is editable in composer -->Titre du bloc</h4>
+            </div>
+            <div class="bloc-content container-fluid layout-rows">
+                <div class="row layout-cols">
+                    <div class="col-4 layout-cell splitable-grid">
+                        <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
+                    </div>
+                    <div class="col-4 layout-cell splitable-grid">
+                        <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
+                    </div>
+                    <div class="col-4 layout-cell splitable-grid">
+                        <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
+                    </div>
                 </div>
+            </div>
+            <div class="bloc-sources editable-text">
+                <p>SOURCE: INSEE <strong>publication 2020</strong></p>
+            </div>
+        </div>
+    </template>
+
+    <!-- REQUERY (n) template report-bloc is a report bloc -->
+    <template class="report-bloc" id="b4-4-4_2">
+        <div class="report-bloc lyrow b4-4-4_2" data-label="3 colonnes + 2" data-description="33%/33%/33%x2">
+            <div class="bloc-title editable-text">
+                <h4><!-- this text is editable in composer -->Titre du bloc</h4>
+            </div>
+            <div class="bloc-content container-fluid layout-rows">
+                <div class="row layout-cols">
+                    <div class="col-4 layout-cell splitable-grid">
+                        <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
+                    </div>
+                    <div class="col-4 layout-cell splitable-grid">
+                        <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
+                    </div>
+                    <div class="col-4 layout-rows">
+                        <div class="row layout-cols">
+                            <div class="col-12 layout-cell splitable-grid">
+                                <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
+                            </div>
+                        </div>
+                        <div class="row layout-cols">
+                            <div class="col-12 layout-cell splitable-grid">
+                                <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bloc-sources editable-text">
+                <p>SOURCE: INSEE <strong>publication 2020</strong></p>
             </div>
         </div>
     </template>
@@ -101,7 +119,6 @@
             <h1 id="{{dataviz}}" class="dataviz report-title"></h1>
         </div>
     </template>
-
     <!-- REQUERY figure component -->
     <template class="report-component report-figure">
         <div class="report-component.figure card-body">
@@ -113,7 +130,6 @@
             </div>
         </div>
     </template>
-
     <!-- REQUERY chart component -->
     <template class="report-component report-chart">
         <div class="report-component.chart full-width">
@@ -122,7 +138,6 @@
             <div class="report-dataviz-description mt-auto">Description</div>
         </div>
     </template>
-
     <!-- REQUERY table component -->
     <template class="report-component report-table">
         <div class="report-component.chart card-body">
@@ -161,239 +176,8 @@
             </div>
         </div>
     </template>
+
     <!-- STYLE USED BY this TEMPLATE -->
     <style>
-/* Couleur de fond de la page*/
-.model-composer {
-    background-color: #f5f5f5;
-}
-/* Font */
-.report {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-}
-/* Eléments structurants */
-/* titre du rapport */
-.report-title {
-    font-size: 2em;
-}
-/* titre des blocs */
-.bloc-title {
-    font-weight: 700;
-    padding-top: 15px;
-    text-transform: uppercase;
-    letter-spacing: 0.2px;
-    color: #213042;
-}
-/* sources des blocs */
-.bloc-sources {
-    margin-top:10px;
-    font-size: 12px;
-}
-.bloc-sources p {
-    padding-left: 20px;
-}
-/* Texte libre */
-.free-text,
-.titleBloc {
-    font-size: 12px;
-}
-/* titre-n can be used with .bloc-title, .bloc-sources, .free-text */
-.titre-1 {
-    font-size: 2em;
-    font-weight: 700;
-}
-.titre-2 {
-    font-size: 24px;
-    font-weight: 700;
-
-}
-.titre-3 {
-    font-size: 20px;
-    font-weight: 500;
-}
-.titre-4 {
-    font-size: 16px;
-    font-weight: 400;
-}
-/* DATAVIZ CONTAINERS*/
-.model-composer .customBaseColumn {
-    padding: 0;
-}
-.verticalDivision .row {
-    margin: 0;
-}
-.report-bloc .dataviz-container {
-    display: flex;
-    height: 100%;
-    justify-content: center;
-}
-.dataviz-container .card-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-}
-/* FROM MREPORT.CSS */
-.editable-text {
-    margin-bottom: 0 !important;
-}
-.report-chart,
-.report-figure {
-    padding-top: 20px;
-}
-.report-chart {
-    width: 100%;
-}
-.full-width{
-    width: 100%;
-}
-.dataviz-container {
-    padding-right: 0;
-    padding-left: 0;
-}
-.view,
-.lyrow{
-    /* max-height:300px; */
-    height:100%;
-}
-.bloc-content .customBaseColumn .view{
-  height:100%;
-}
-.bloc-content .row {
-    margin-left: 0;
-    margin-right: 0;
-    height: 100%;
-}
-.view .row .col-md-12{
-    height: 100%;
-}
-.dataviz-container:hover .report-share{
-    display: block;
-}
-.no-data{
-    text-align: center;
-}
-.report-dataviz-title,
-.report-dataviz-description{
-    margin-right: 15px;
-    margin-left: 15px;
-}
-.report-dataviz-title{
-    margin-top: 15px;
-    text-align: center;
-    color: #0094ab;
-    font-weight: 600;
-}
-.report-dataviz-description{
-    margin-bottom: 5px;
-    text-align: justify;
-    font-size: smaller;
-}
-.report-figure-chiffre {
-    padding-top: 30px;
-
-}
-/* DATAVIZ FIGURE */
-.report-figure-chiffre {
-    padding-top: 30px;
-    color:#0094ab;
-    font-size: 40px;
-    font-weight: 900;
-    text-align: center;
-}
-.report-figure-caption {
-    color:#0094ab;
-    font-size: 13px;
-    font-weight: 600;
-    line-height: 1;
-    text-align: center;
-}
-.custom-icon {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-position-y: top;
-    background-size: 75px 45px;
-}
-.custom-icon-left {
-    width: 100%;
-    background-position:left;
-    background-size: 100px 75px;
-    background-position-x: 2em;
-}
-.custom-icon-right {
-    width: 100%;
-    background-position:right;
-    background-size: 100px 75px;
-}
-/* used to test custom-icon in model-checker" */
-.icon-default {
-    background-image: url(/static/picto/default/icon-default.svg);
-}
-/* Icon & text used with empty dataviz */
-.model-composer div.dataviz-container:empty {
-    min-height: 100px;
-    background-image: url(/static/picto/black/travaux.svg);
-    background-repeat: no-repeat;
-    background-size: 75px;
-    background-position-x: center;
-    background-position-y: center;
-}
-
-.model-composer div.dataviz-container:empty:after {
-    content: "En construction";
-    text-align: center;
-    padding-left: 180px;
-}
-
-/* IMPRESSION */
-.printButton{
-    width: 60px;
-    height: 60px;
-    position: fixed;
-    right: 30px;
-    bottom: 30px;
-    background-color: #eee;
-    color: #555;
-    padding: 10px;
-    border-radius: 35px;
-    box-shadow: 0 0 5px #ccc;
-    font-size: 24px;
-    text-align: center;
-}
-
-.fa-print:before{
-    margin: 0 auto;
-}
-
-.printButton:hover{
-    background-color:#555;
-    color:#eee;
-}
-@media print {
-    @page {
-    size: A4 portrait;
-    -webkit-print-color-adjust: exact !important;   /* Chrome, Safari */
-    color-adjust: exact !important;
-
-  }
-  canvas {
-        min-height: 100%;
-        max-width: 100%;
-        max-height: 100%;
-        height: auto!important;
-        width: auto!important;
-    }
-
-    .printButton{
-        display: none !important;
-    }
-    .lyrow {
-        page-break-inside: avoid;
-    }
-    .model-composer {
-        background-color: #ffffff;
-    }
-}
     </style>
 </div>
