Composer: revue du split des cellules & debut refont du formulaire de division

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -21,7 +21,7 @@
             </div>
             <div class="bloc-content container-fluid layout-rows">
                 <div class="row layout-cols">
-                    <div class="col-12 layout-cell splitable-grid">
+                    <div class="col-12 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
                 </div>
@@ -40,10 +40,10 @@
             </div>
             <div class="bloc-content container-fluid layout-rows">
                 <div class="row layout-cols">
-                    <div class="col-6 layout-cell splitable-grid">
+                    <div class="col-6 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
-                    <div class="col-6 layout-cell splitable-grid">
+                    <div class="col-6 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
                 </div>
@@ -62,13 +62,13 @@
             </div>
             <div class="bloc-content container-fluid layout-rows">
                 <div class="row layout-cols">
-                    <div class="col-4 layout-cell splitable-grid">
+                    <div class="col-4 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
-                    <div class="col-4 layout-cell splitable-grid">
+                    <div class="col-4 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
-                    <div class="col-4 layout-cell splitable-grid">
+                    <div class="col-4 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
                 </div>
@@ -87,20 +87,20 @@
             </div>
             <div class="bloc-content container-fluid layout-rows">
                 <div class="row layout-cols">
-                    <div class="col-4 layout-cell splitable-grid">
+                    <div class="col-4 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
-                    <div class="col-4 layout-cell splitable-grid">
+                    <div class="col-4 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
                     <div class="col-4 layout-rows">
                         <div class="row layout-cols">
-                            <div class="col-12 layout-cell splitable-grid">
+                            <div class="col-12 layout-cell">
                                 <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                             </div>
                         </div>
                         <div class="row layout-cols">
-                            <div class="col-12 layout-cell splitable-grid">
+                            <div class="col-12 layout-cell">
                                 <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                             </div>
                         </div>
