Composer: gestion des suppressions de cellules

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -20,7 +20,7 @@
                 <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
             <div class="bloc-content container-fluid layout-rows">
-                <div class="row layout-cols">
+                <div class="row layout-cols layout-fixed">
                     <div class="col-12 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
@@ -39,7 +39,7 @@
                 <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
             <div class="bloc-content container-fluid layout-rows">
-                <div class="row layout-cols">
+                <div class="row layout-cols layout-fixed">
                     <div class="col-6 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
@@ -61,7 +61,7 @@
                 <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
             <div class="bloc-content container-fluid layout-rows">
-                <div class="row layout-cols">
+                <div class="row layout-cols layout-fixed">
                     <div class="col-4 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
@@ -86,7 +86,7 @@
                 <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
             <div class="bloc-content container-fluid layout-rows">
-                <div class="row layout-cols">
+                <div class="row layout-cols layout-fixed">
                     <div class="col-4 layout-cell">
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
@@ -94,12 +94,12 @@
                         <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                     </div>
                     <div class="col-4 layout-rows">
-                        <div class="row layout-cols">
+                        <div class="row layout-cols layout-fixed">
                             <div class="col-12 layout-cell">
                                 <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                             </div>
                         </div>
-                        <div class="row layout-cols">
+                        <div class="row layout-cols layout-fixed">
                             <div class="col-12 layout-cell">
                                 <ul class="dataviz-container list-group"><!--dataviz component is injected here --></ul>
                             </div>
