Remise en place du saveHtml (sans la version composer) et du saveJson

--- a/frontend/static/html/wizard.html
+++ b/frontend/static/html/wizard.html
@@ -243,7 +243,7 @@
 
 
 
-                        <div class="row wizard-code" style="padding-top: 10p;display: none;">
+                        <div class="row wizard-code">
                             <div class="col">
                                 <div class="card">
                                     <code class="card-body" id="wizard-code"><!--code is injected here --></code>
@@ -256,10 +256,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button id="wizard_add" class="btn mreport-primary-color-1-bg" onclick="wizard.configureDataviz();">Sauvegarder dans le
-                    rapport sélectionné</button>
-                <button id="wizard_default_save" class="btn mreport-primary-color-2-bg">Définir comme
-                    représentation par défaut</button>
+                <button id="wizard_add" class="btn mreport-primary-color-1-bg">Sauvegarder dans le rapport sélectionné</button>
+                <button id="wizard_default_save" class="btn mreport-primary-color-2-bg">Définir comme représentation par défaut</button>
                 <button type="button" class="btn mreport-primary-color-3-bg" data-dismiss="modal">Fermer</button>
             </div>
         </div>
