--- a/frontend/static/html/model-a.html
+++ b/frontend/static/html/model-a.html
@@ -9,7 +9,7 @@
     </template>
     <template class="report-bloc-title" id="btitle">
         <div class="report-bloc-title" data-model-title="Titre" data-model-description="Titre">
-            <div class="dataviz-container"><!--dataviz component is injected here --></div>
+            <div class="component-container"><!--dataviz|element component is injected here --></div>
         </div>
     </template>
     <!-- REQUERY (n) template report-bloc is a report bloc -->
@@ -23,17 +23,17 @@
             <div class="view bloc-content">
                 <div class="row">
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-4 customBaseColumn">
                         <div class="lyrow verticalDivision">
                             <div class="view">
                                 <div class="row">
                                     <div class="col-md-12 dividedcolumn customBaseColumn">
-                                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                                     </div>
                                 </div>
                             </div>
@@ -42,7 +42,7 @@
                             <div class="view">
                                 <div class="row">
                                     <div class="col-md-12 dividedcolumn customBaseColumn">
-                                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                                     </div>
                                 </div>
                             </div>
@@ -72,13 +72,13 @@
             <div class="view bloc-content">
                 <div class="row">
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
             <div class="view bloc-content">
                 <div class="row">
                     <div class="col-md-12 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                 </div>
             </div>
@@ -132,10 +132,10 @@
             <div class="view bloc-content">
                 <div class="row">
                     <div class="col-md-6 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-6 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                 </div>
             </div>
@@ -298,7 +298,7 @@
 .verticalDivision .row {
     margin: 0;
 }
-.report-bloc .dataviz-container {
+.report-bloc .component-container {
     display: flex;
     height: 100%;
     justify-content: center;
@@ -307,7 +307,7 @@
     border:none;
     box-shadow:0 0 5px #ddd;
 }
-.dataviz-container .card-body {
+.component-container .card-body {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -355,7 +355,7 @@ div[class*="list-group-item"]{
 .view .row .col-md-12{
     height: 100%;
 }
-.dataviz-container:hover .report-share{
+.component-container:hover .report-share{
     display: block;
 }
 .no-data{
@@ -453,7 +453,7 @@ div[class*="list-group-item"]{
 }
 
 /*Margin around blocs*/
-/*.verticalDivision .dataviz-container{
+/*.verticalDivision .component-container{
   margin: 0 10px;
 }
 .verticalDivision:first-child{
@@ -463,7 +463,7 @@ div[class*="list-group-item"]{
   margin-top:15px;
 }*/
 /* Icon & text used with empty dataviz */
-.model-a div.dataviz-container:empty {
+.model-a div.component-container:empty {
     min-height: 100px;
     background-image: url(/static/picto/black/travaux.svg);
     background-repeat: no-repeat;
@@ -472,7 +472,7 @@ div[class*="list-group-item"]{
     background-position-y: center;
 }
 
-.model-a div.dataviz-container:empty:after {
+.model-a div.component-container:empty:after {
     content: "En construction";
     text-align: center;
     padding-left: 180px;
