--- a/frontend/static/html/model-b.html
+++ b/frontend/static/html/model-b.html
@@ -9,7 +9,7 @@
     </template>
     <template class="report-bloc-title" id="btitle">
         <div class="report-bloc-title" data-model-title="Titre" data-model-description="Titre">
-            <div class="dataviz-container"></div>
+            <div class="component-container"></div>
         </div>
     </template>
     <!-- REQUERY (n) template report-bloc is a report bloc -->
@@ -23,17 +23,17 @@
             <div class="view bloc-content">
                 <div class="row">
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-4 customBaseColumn">
                         <div class="lyrow h-50 verticalDivision">
                             <div class="view">
                                 <div class="row">
                                     <div class="col-md-12 dividedcolumn customBaseColumn">
-                                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                                     </div>
                                 </div>
                             </div>
@@ -42,7 +42,7 @@
                             <div class="view">
                                 <div class="row">
                                     <div class="col-md-12 dividedcolumn customBaseColumn">
-                                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                                     </div>
                                 </div>
                             </div>
@@ -72,13 +72,13 @@
             <div class="view bloc-content">
                 <div class="row">
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
             <div class="view bloc-content">
                 <div class="row">
                     <div class="col-md-12 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                 </div>
             </div>
@@ -128,10 +128,10 @@
             <div class="view bloc-content">
                 <div class="row">
                     <div class="col-md-6 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                     <div class="col-md-6 dividedcolumn customBaseColumn">
-                        <div class="dataviz-container card list-group-item"><!--dataviz component is injected here --></div>
+                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
                     </div>
                 </div>
             </div>
@@ -274,12 +274,12 @@
 .verticalDivision .row {
     margin: 0;
 }
-.report-bloc .dataviz-container {
+.report-bloc .component-container {
     display: flex;
     height: 100%;
     justify-content: center;
 }
-.dataviz-container .card-body {
+.component-container .card-body {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -300,7 +300,7 @@
 .full-width{
     width: 100%;
 }
-.dataviz-container {
+.component-container {
     padding-right: 0;
     padding-left: 0;
 }
@@ -320,7 +320,7 @@
 .view .row .col-md-12{
     height: 100%;
 }
-.dataviz-container:hover .report-share{
+.component-container:hover .report-share{
     display: block;
 }
 .no-data{
@@ -383,7 +383,7 @@
     background-image: url(/static/picto/default/icon-default.svg);
 }
 /* Icon & text used with empty dataviz */
-.model-b div.dataviz-container:empty {
+.model-b div.component-container:empty {
     min-height: 100px;
     background-image: url(/static/picto/black/travaux.svg);
     background-repeat: no-repeat;
@@ -392,7 +392,7 @@
     background-position-y: center;
 }
 
-.model-b div.dataviz-container:empty:after {
+.model-b div.component-container:empty:after {
     content: "En construction";
     text-align: center;
     padding-left: 180px;
