Renommage de la classe CSS bloc-content en bloc-layout

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -9,7 +9,7 @@
 
     <template class="report-structure" id="btitle">
         <div class="bloc-structure" data-label="Bloc titre" data-description="Bloc titre (autoconfig)">
-            <div class="bloc-content container-fluid layout-data">
+            <div class="bloc-layout container-fluid layout-data">
                 <ul class="component-container list-group dataviz-autoconfig"><!--dataviz|element component is injected here --></ul>
             </div>
         </div>
@@ -17,7 +17,7 @@
 
     <template class="report-structure" id="bsimple">
         <div class="bloc-structure" data-label="Bloc simple" data-description="Bloc contenu uniquement">
-            <div class="bloc-content container-fluid layout-rows">
+            <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
                     <div class="col-12 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
@@ -33,7 +33,7 @@
             <div class="bloc-title editable-text">
                 <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
-            <div class="bloc-content container-fluid layout-rows">
+            <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
                     <div class="col-12 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
@@ -52,7 +52,7 @@
             <div class="bloc-title editable-text">
                 <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
-            <div class="bloc-content container-fluid layout-rows">
+            <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
                     <div class="col-6 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
@@ -74,7 +74,7 @@
             <div class="bloc-title editable-text">
                 <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
-            <div class="bloc-content container-fluid layout-rows">
+            <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
                     <div class="col-4 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
@@ -99,7 +99,7 @@
             <div class="bloc-title editable-text">
                 <h4><!-- this text is editable in composer -->Titre du bloc</h4>
             </div>
-            <div class="bloc-content container-fluid layout-rows">
+            <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
                     <div class="col-4 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
@@ -130,7 +130,7 @@
 
     <template class="report-element" id="btexte">
         <div class="bloc-element" data-label="Composant texte" data-description="Bloc texte">
-            <div class="bloc-content editable-text">
+            <div class="bloc-layout editable-text">
                 <!-- this text is editable in composer -->Texte de l'élément
             </div>
         </div>
