--- a/frontend/static/html/model-a.html
+++ b/frontend/static/html/model-a.html
@@ -19,8 +19,8 @@
             <h4 class="bloc-title editable-text titre-1 ">Titre du bloc
                 <!-- this text is editable in composer -->
             </h4>
-            <!-- REQUERY bloc-content -->
-            <div class="view bloc-content">
+            <!-- REQUERY bloc-layout -->
+            <div class="view bloc-layout">
                 <div class="row">
                     <div class="col-md-4 dividedcolumn customBaseColumn">
                         <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
@@ -69,7 +69,7 @@
             <h4 class="bloc-title editable-text titre-1 ">Titre du bloc
                 <!-- this text is editable in composer -->
             </h4>
-            <div class="view bloc-content">
+            <div class="view bloc-layout">
                 <div class="row">
                     <div class="col-md-4 dividedcolumn customBaseColumn">
                         <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
@@ -102,7 +102,7 @@
                 Titre du bloc
                 <!-- this text is editable in composer -->
             </h4>
-            <div class="view bloc-content">
+            <div class="view bloc-layout">
                 <div class="row">
                     <div class="col-md-12 dividedcolumn customBaseColumn">
                         <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
@@ -129,7 +129,7 @@
                 Titre du bloc
                 <!-- this text is editable in composer -->
             </h4>
-            <div class="view bloc-content">
+            <div class="view bloc-layout">
                 <div class="row">
                     <div class="col-md-6 dividedcolumn customBaseColumn">
                         <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
@@ -347,7 +347,7 @@ div[class*="list-group-item"]{
 .lyrow{
     height: 100%;
 }
-.bloc-content .row {
+.bloc-layout .row {
     margin-left: 0;
     margin-right: 0;
     height: 100%;
