Composer: modification des textes éditables (text ou html)

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -31,7 +31,7 @@
     <template class="report-structure" id="b12">
         <div class="bloc-structure" data-label="1 colonne" data-description="Bloc 100%">
             <div class="bloc-title editable-text">
-                <h4><!-- this text is editable in composer -->Titre du bloc</h4>
+                <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="bloc-sources editable-text">
-                <p>SOURCE: INSEE <strong>publication 2020</strong></p>
+                SOURCE: INSEE <strong>publication 2020</strong>
             </div>
         </div>
     </template>
@@ -50,7 +50,7 @@
     <template class="report-structure" id="b6-6">
         <div class="bloc-structure" data-label="2 colonnes" data-description="Bloc 50%/50%">
             <div class="bloc-title editable-text">
-                <h4><!-- this text is editable in composer -->Titre du bloc</h4>
+                <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="bloc-sources editable-text">
-                <p>SOURCE: INSEE <strong>publication 2020</strong></p>
+                SOURCE: INSEE <strong>publication 2020</strong>
             </div>
         </div>
     </template>
@@ -72,7 +72,7 @@
     <template class="report-structure" id="b4-4-4">
         <div class="bloc-structure" data-label="3 colonnes" data-description="Bloc 33%/33%/33%">
             <div class="bloc-title editable-text">
-                <h4><!-- this text is editable in composer -->Titre du bloc</h4>
+                <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="bloc-sources editable-text">
-                <p>SOURCE: INSEE <strong>publication 2020</strong></p>
+                SOURCE: INSEE <strong>publication 2020</strong>
             </div>
         </div>
     </template>
@@ -97,7 +97,7 @@
     <template class="report-structure" id="b4-4-4_2">
         <div class="bloc-structure" data-label="3 colonnes + 2" data-description="Bloc 33%/33%/33%x2">
             <div class="bloc-title editable-text">
-                <h4><!-- this text is editable in composer -->Titre du bloc</h4>
+                <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols layout-fixed">
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="bloc-sources editable-text">
-                <p>SOURCE: INSEE <strong>publication 2020</strong></p>
+                SOURCE: INSEE <strong>publication 2020</strong>
             </div>
         </div>
     </template>
