Composer: gestion de l'état initial (d&d impossible avant chargement d'un rapport, usage des templates pour le conteneur racine)

--- a/frontend/static/html/model-a.html
+++ b/frontend/static/html/model-a.html
@@ -1,6 +1,6 @@
 <div id="model-a" data-colors="#00525f,#006878,#0094ab,#00d6f8,#681215,#781000,#a91d22,#dd363c,#474747,#666666,#858585,#a3a3a3">
     <!-- REQUERY template report is the main report div -->
-    <template class="report">
+    <template class="report-main">
         <div class="container-fluid model-a">
             <div class="container report">
                 <!-- title and blocs are injected here -->
