--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -1,10 +1,9 @@
 <div id="model-composer" data-colors="#005a66,#0094ab,#b0252e,#cf7a26,#e3c213,#9fb935,#2f476c,#b0006b,#555555,#999999">
 
     <!-- REQUERY template report is the main report div -->
-    <template class="report">
-        <div class="container-fluid report">
-            <!-- title and blocs are injected here -->
-        </div>
+    <template class="report-main">
+        <h2 id="composer-report-title"><!-- title is injected here --> </h2>
+        <ul id="report-composition" class="list-group"><!-- blocs are injected here --></ul>
     </template>
 
     <template class="report-structure" id="btitle">
