--- a/frontend/static/html/model-b.html
+++ b/frontend/static/html/model-b.html
@@ -1,6 +1,6 @@
 <div id="model-b" data-colors="#005a66,#0094ab,#b0252e,#cf7a26,#e3c213,#9fb935,#2f476c,#b0006b,#555555,#999999">
     <!-- REQUERY template report is the main report div -->
-    <template class="report">
+    <template class="report-main">
         <div class="container-fluid model-b">
             <div class="container report">
                 <!-- title and blocs are injected here -->
